--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -17,9 +17,9 @@
             <h2>{{helptext}}</h2>
             <hr>
             <br>
-            <p><a href="{{urlone}}">{{linkone}}</a></p>
-            <p><a href="{{urltwo}}">{{linktwo}}</a></p>
-            <p><a href="{{urlthree}}">{{linkthree}}</a></p>
+            <p><a href="{{urlone}}" target="_blank">{{linkone}}</a></p>
+            <p><a href="{{urltwo}}" target="_blank">{{linktwo}}</a></p>
+            <p><a href="{{urlthree}}" target="_blank">{{linkthree}}</a></p>
         </div>
     </div>
     {{>footer}}
